this method actually can throw, related fdo#57451

Change-Id: I26b79829029e127eb8b9ab4fbea3e0f02035ee41